# Infotecs_DevOps_Task

./: CMakeLists.txt  Dockerfile.nginx  README.md  Vagrantfile  docker-nginx-start.sh  hosts.ini  playbook.yml  start-vm.sh
nginx_config/: default.conf  nginx.conf
roles/create-docker/defaults/: main.yml
roles/create-docker/files/: Dockerfile.sqlite3
roles/create-docker/tasks/: main.yml
roles/install-docker/tasks/: main.yml
roles/sqlite3-build/tasks/: main.yml
